# rest_api_python

./: main.py  pyproject.toml  test.db
docs/: conf.py  index.rst
src/: schemas.py
src/api/: auth.py  contacts.py  users.py  utils.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/services/: auth.py  auth_service.py  contacts.py  email.py  upload_file.py  users.py
tests/: test_integration_utils.py
